# trigger_msgs

./: CMakeLists.txt  package.xml
msg/: sync_trigger.msg
