<package>
  <name>trigger_msgs</name>
  <version>4.3.1</version>
  <description>Trigger messages for syncing sensors</description>
  <maintainer email="nir.j@husky.neu.edu">Jagatpreet Nir</maintainer>

  <license>BSD</license>
  <author email="nir.j@husky.neu.edu">Jagatpreet Nir</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <!-- <test_depend>geometry_msgs</test_depend> -->
  <!-- <test_depend>actionlib_msgs</test_depend> -->

  <export>

  </export>
</package>
